--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: "3.7"
 services:
     # image project
     app:
+        image: gustavogordoni/ouviacess:v1.02
+        container_name: app
         build:
             context: .
             dockerfile: Dockerfile
@@ -18,18 +20,20 @@ services:
     # nginx
     nginx:
         image: nginx:alpine
+        container_name: nginx
         restart: unless-stopped
         ports:
-            - "8989:80"
+            - "8000:80"
         volumes:
             - ./:/var/www
             - ./docker/nginx/:/etc/nginx/conf.d/
         networks:
             - laravel
 
-    # db mysql
-    db:
+    # mysql
+    mysql:
         image: mysql:5.7.22
+        container_name: mysql
         restart: unless-stopped
         environment:
             MYSQL_DATABASE: ${DB_DATABASE:-laravel}
@@ -46,6 +50,7 @@ services:
     # redis
     redis:
         image: redis:latest
+        container_name: redis
         networks:
             - laravel
 
