lang/pt-BR && validations

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
             - ./:/var/www
         depends_on:
             - redis
+            - nginx
+            - mysql
         networks:
             - laravel
 
